--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,22 +1,7 @@
 name: Test packages
 
 on:
-  # Manual trigger
-  workflow_dispatch:
-    inputs:
-      package:
-        type: string
-        description: "The name of the source package to test"
-        required: true
-      flavor:
-        type: string
-        description: "Flavor of the source package to test"
-        required: true
-      test_type:
-        type: string
-        description: "The type of test to perform"
-        required: true
-    # Triggered by pull-request-conditionals.yaml
+  # Triggered by pull-request-conditionals.yaml
   workflow_call:
     inputs:
       package:
@@ -31,6 +16,10 @@ on:
         type: string
         description: "The type of test to perform"
         required: true
+      sha:
+        type: string
+        description: "The SHA to checkout and test with"
+        required: true
 
 permissions:
   contents: read
@@ -44,8 +33,11 @@ jobs:
       UDS_PKG: ${{ inputs.package }}
 
     steps:
+      # Todo: update pipeline status
       - name: Checkout repository
         uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
+        with:
+          ref: ${{ inputs.sha }}
 
       - name: Environment setup
         uses: ./.github/actions/setup
