--- a/.github/workflows/pull-request-conditionals.yaml
+++ b/.github/workflows/pull-request-conditionals.yaml
@@ -28,9 +28,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Download PR info artifact
-        uses: actions/download-artifact@v2
+        uses: actions/download-artifact@v4
         with:
           name: pr_info
+          run-id: ${{ github.event.workflow_run.id }} # Pulls artifact from the PR workflow run
 
       - name: Read PR info
         run: |
