--- a/.github/workflows/pull-request-conditionals.yaml
+++ b/.github/workflows/pull-request-conditionals.yaml
@@ -29,7 +29,7 @@ jobs:
     steps:
       - name: Info log
         run: |
-          echo ${{ github.event.workflow_run }}
+          echo ${{ toJson(github.event.workflow_run) }}
       - name: Download PR info artifact
         uses: actions/download-artifact@v4
         with:
