--- a/.github/workflows/pr-trigger.yaml
+++ b/.github/workflows/pr-trigger.yaml
@@ -6,7 +6,7 @@ on:
     types: [milestoned, opened, reopened, synchronize]
 
 jobs:
-  build:
+  pr-info:
     runs-on: ubuntu-latest
     steps:        
       - run: |
