--- a/.github/workflows/pull-request-conditionals.yaml
+++ b/.github/workflows/pull-request-conditionals.yaml
@@ -12,6 +12,7 @@ permissions:
   id-token: write # Needed for OIDC-related operations.
   contents: read # Allows reading the content of the repository.
   pull-requests: read # Allows reading pull request metadata.
+  actions: read
 
 # Default settings for all run commands in the workflow jobs.
 defaults:
@@ -32,6 +33,7 @@ jobs:
         with:
           name: pr_info
           run-id: ${{ github.event.workflow_run.id }} # Pulls artifact from the PR workflow run
+          github-token: ${{ github.token }}
       - name: Unzip PR info artifact
         run: unzip pr_info.zip
 
