--- a/.github/workflows/pull-request-conditionals.yaml
+++ b/.github/workflows/pull-request-conditionals.yaml
@@ -44,6 +44,9 @@ jobs:
     needs: pr-info
     runs-on: ubuntu-latest
     steps:
+      - run: |
+          echo ${{ needs.pr-info.outputs.PR_NUMBER }}
+          echo ${{ needs.pr-info.outputs.PR_SHA }}
       # Todo: update pipeline status
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
         with:
