fix: forgot to commit :(

--- a/.github/actions/status-checks/action.yaml
+++ b/.github/actions/status-checks/action.yaml
@@ -19,7 +19,7 @@ inputs:
     required: true
   sha:
     description: "The SHA for the status check"
-  
+    required: true
 
 runs:
   using: composite
