--- a/.github/actions/status-checks/action.yaml
+++ b/.github/actions/status-checks/action.yaml
@@ -37,7 +37,7 @@ runs:
           -H "Accept: application/vnd.github+json" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
           /repos/${{ github.repository }}/statuses/${{ inputs.sha }} \
-          -f "state=${{ input.status }}" \
+          -f "state=${{ inputs.status }}" \
           -f "target_url=${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}/job/$job_id" \
           -f "context=${{ github.job }}" \
           -f "description=$DESCRIPTION"
