--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -43,6 +43,7 @@ jobs:
         with:
           status: "pending"
           sha: ${{ inputs.sha }}
+          name: "Test (${{inputs.package}}, ${{inputs.flavor}}, ${{inputs.test_type}})"
 
       - name: Environment setup
         uses: ./.github/actions/setup
@@ -79,3 +80,4 @@ jobs:
         with:
           status: ${{ job.status == 'success' && 'success' || job.status == 'failure' && 'failure' || 'error' }}
           sha: ${{ inputs.sha }}
+          name: "Test (${{inputs.package}}, ${{inputs.flavor}}, ${{inputs.test_type}})"
