--- a/.github/actions/status-checks/action.yaml
+++ b/.github/actions/status-checks/action.yaml
@@ -34,7 +34,7 @@ runs:
         GH_TOKEN: ${{ github.token }}
       run: |
         jobs=$(gh api repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/attempts/${{ github.run_attempt }}/jobs)
-        job_id=$(echo $jobs | jq -r '.jobs[] | select(.runner_name=="${{ runner.name }}") | .id')
+        job_id=$(echo $jobs | jq -r '.jobs[] | select(.name=="${{ inputs.name }}") | .id')
         gh api \
           --method POST \
           -H "Accept: application/vnd.github+json" \
