--- a/.github/workflows/pull-request-conditionals.yaml
+++ b/.github/workflows/pull-request-conditionals.yaml
@@ -37,11 +37,8 @@ jobs:
           github-token: ${{ github.token }}
       - name: Read PR info
         id: read-info
-        run: |
-          echo "PR_NUMBER=$(cat pr_number.txt)" >> $GITHUB_OUTPUT
-          echo "PR_SHA=$(cat pr_sha.txt)" >> $GITHUB_OUTPUT
+        run: echo "PR_SHA=$(cat pr_sha.txt)" >> $GITHUB_OUTPUT
     outputs:
-      prNumber: ${{ steps.read-info.outputs.PR_NUMBER }}
       prSHA: ${{ steps.read-info.outputs.PR_SHA }}
 
   lint-check:
